fixing text overflow on player names

--- a/website/upsmash/static/css/user.css
+++ b/website/upsmash/static/css/user.css
@@ -60,7 +60,6 @@ background-color: #dfdfdf;
 }
 
 .flexbox-player {
-  flex: 2 0 0;
   background-color: rgba(0,0,0,0);
   height: 20px;
   align-items: stretch;
@@ -70,15 +69,18 @@ background-color: #dfdfdf;
 }
 
 .flexbox-player-left {
+  flex: 10 0 0;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 
 .flexbox-player-middle {
+  flex: 6 0 0;
   text-align: center;
 }
 
 .flexbox-player-right {
+  flex: 10 0 0;
   text-align: right;
 }
 
